Fix spacing

--- a/_widget/src/components/articles/style.scss
+++ b/_widget/src/components/articles/style.scss
@@ -35,6 +35,7 @@
 
       &:last-child {
         border-bottom: 0;
+        padding-bottom: 0;
       }
 
       .selected-article {
